# stable_abi

./: CMakeLists.txt  CMakePresets.json  CONTRIBUTING.md  README.md
.github/workflows/: ci_tests.yml
examples/: CMakeLists.txt  order_book_hash.cpp
include/beman/stable_abi/: CMakeLists.txt  abi_description.hpp  abi_hash.hpp  config.hpp  crc32.hpp  stable_abi.hpp
infra/cmake/: clang-p2996-toolchain.cmake  use-fetch-content.cmake
tests/beman/stable_abi/: CMakeLists.txt  abi_hash.test.cpp
